manifests/cilium-hub-apiserver.yaml

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hub-to-apiserver
spec:
  endpointSelector:
    matchLabels:
      app: jupyterhub
      component: hub
      release: lrosehub
  egress:
    - toEntities:
        - kube-apiserver
